[gd_scene load_steps=9 format=3 uid="uid://ofi5kflovwaw"]

[ext_resource type="Script" path="res://World/Environment/Asset Pack - Roguelike Dungeon/card_selection.gd" id="1_6kh1b"]
[ext_resource type="Script" path="res://World/Environment/Asset Pack - Roguelike Dungeon/Card_Effect_Button.gd" id="2_d2p23"]
[ext_resource type="Texture2D" uid="uid://drbtv5kqbqan2" path="res://UI/card_outline_white.png" id="3_c0un7"]
[ext_resource type="Texture2D" uid="uid://bldievrlq0s0x" path="res://Player/Inventory/Art/GUI_1x_sliced.png" id="3_l4ooe"]
[ext_resource type="Texture2D" uid="uid://dm14f1ob77ihi" path="res://UI/card_outline_gold.png" id="4_hml8t"]

[sub_resource type="Animation" id="Animation_b1x5w"]
resource_name = "Canvas_Title"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Title:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.6, 1.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CardContainer/Card_Effect_Button_1:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.1, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, -3.92136e-09), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BG:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.490196)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CardContainer/Card_Effect_Button_2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.5, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CardContainer/Card_Effect_Button_3:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(2.1, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"freeze_game"
}]
}

[sub_resource type="Animation" id="Animation_goots"]
length = 0.001

[sub_resource type="AnimationLibrary" id="AnimationLibrary_06kt5"]
_data = {
"Canvas_Title": SubResource("Animation_b1x5w"),
"RESET": SubResource("Animation_goots")
}

[node name="CardSelection" type="CanvasLayer" groups=["CardSelection"]]
process_mode = 3
script = ExtResource("1_6kh1b")

[node name="BG" type="ColorRect" parent="."]
modulate = Color(0, 0, 0, 0)
offset_right = 320.0
offset_bottom = 181.0

[node name="Title" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 38.0
offset_top = 8.0
offset_right = 286.0
offset_bottom = 26.0
theme_override_font_sizes/font_size = 12
text = "Totaop's Fortune shines upon you.."
horizontal_alignment = 1

[node name="CardContainer" type="HBoxContainer" parent="."]
offset_left = 16.0
offset_top = 38.1165
offset_right = 304.0
offset_bottom = 141.115
theme_override_constants/separation = 40

[node name="Card_Effect_Button_1" type="Button" parent="CardContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(69, 0)
layout_mode = 2
script = ExtResource("2_d2p23")

[node name="Card_Icon" type="Sprite2D" parent="CardContainer/Card_Effect_Button_1"]
position = Vector2(10, 8)
texture = ExtResource("3_l4ooe")
hframes = 8
vframes = 2
region_enabled = true
region_rect = Rect2(0, 136, 71, 17)

[node name="Card_Title" type="Label" parent="CardContainer/Card_Effect_Button_1"]
layout_mode = 0
offset_left = 16.0
offset_top = 4.0
offset_right = 51.0
offset_bottom = 13.0
theme_override_font_sizes/font_size = 8
text = "Title Text"
horizontal_alignment = 1

[node name="Card_Description" type="Label" parent="CardContainer/Card_Effect_Button_1"]
layout_mode = 0
offset_left = 6.0
offset_top = 19.0
offset_right = 65.0
offset_bottom = 88.0
theme_override_font_sizes/font_size = 5
text = "This is a test description that will display the effects that the player will choose...
"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Card_Background" type="NinePatchRect" parent="CardContainer/Card_Effect_Button_1"]
layout_mode = 0
offset_right = 69.0
offset_bottom = 103.0
texture = ExtResource("3_c0un7")
patch_margin_left = 9
patch_margin_top = 9
patch_margin_right = 9
patch_margin_bottom = 9

[node name="Card_Stats" type="Label" parent="CardContainer/Card_Effect_Button_1"]
layout_mode = 0
offset_left = 22.0
offset_top = 88.0
offset_right = 43.0
offset_bottom = 95.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 5
text = "+10 STR"

[node name="Card_Effect_Button_2" type="Button" parent="CardContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(69, 0)
layout_mode = 2
script = ExtResource("2_d2p23")

[node name="Card_Icon" type="Sprite2D" parent="CardContainer/Card_Effect_Button_2"]
position = Vector2(10, 8)
texture = ExtResource("3_l4ooe")
hframes = 8
vframes = 2
region_enabled = true
region_rect = Rect2(0, 136, 71, 17)

[node name="Card_Title" type="Label" parent="CardContainer/Card_Effect_Button_2"]
layout_mode = 0
offset_left = 16.0
offset_top = 4.0
offset_right = 51.0
offset_bottom = 13.0
theme_override_font_sizes/font_size = 8
text = "Title Text"
horizontal_alignment = 1

[node name="Card_Description" type="Label" parent="CardContainer/Card_Effect_Button_2"]
layout_mode = 0
offset_left = 6.0
offset_top = 19.0
offset_right = 65.0
offset_bottom = 88.0
theme_override_font_sizes/font_size = 5
text = "This is a test description that will display the effects that the player will choose...
"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Card_Background" type="NinePatchRect" parent="CardContainer/Card_Effect_Button_2"]
layout_mode = 0
offset_right = 69.0
offset_bottom = 103.0
texture = ExtResource("4_hml8t")
patch_margin_left = 9
patch_margin_top = 9
patch_margin_right = 9
patch_margin_bottom = 9

[node name="Card_Stats" type="Label" parent="CardContainer/Card_Effect_Button_2"]
layout_mode = 0
offset_left = 22.0
offset_top = 88.0
offset_right = 43.0
offset_bottom = 95.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 5
text = "+10 STR"

[node name="Card_Effect_Button_3" type="Button" parent="CardContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(69, 0)
layout_mode = 2
script = ExtResource("2_d2p23")

[node name="Card_Icon" type="Sprite2D" parent="CardContainer/Card_Effect_Button_3"]
position = Vector2(10, 8)
texture = ExtResource("3_l4ooe")
hframes = 8
vframes = 2
region_enabled = true
region_rect = Rect2(0, 136, 71, 17)

[node name="Card_Title" type="Label" parent="CardContainer/Card_Effect_Button_3"]
layout_mode = 0
offset_left = 16.0
offset_top = 4.0
offset_right = 51.0
offset_bottom = 13.0
theme_override_font_sizes/font_size = 8
text = "Title Text"
horizontal_alignment = 1

[node name="Card_Description" type="Label" parent="CardContainer/Card_Effect_Button_3"]
layout_mode = 0
offset_left = 6.0
offset_top = 19.0
offset_right = 65.0
offset_bottom = 88.0
theme_override_font_sizes/font_size = 5
text = "This is a test description that will display the effects that the player will choose...
"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Card_Background" type="NinePatchRect" parent="CardContainer/Card_Effect_Button_3"]
layout_mode = 0
offset_right = 69.0
offset_bottom = 103.0
texture = ExtResource("3_c0un7")
patch_margin_left = 9
patch_margin_top = 9
patch_margin_right = 9
patch_margin_bottom = 9

[node name="Card_Stats" type="Label" parent="CardContainer/Card_Effect_Button_3"]
layout_mode = 0
offset_left = 22.0
offset_top = 88.0
offset_right = 43.0
offset_bottom = 95.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 5
text = "+10 STR"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_06kt5")
}

[connection signal="mouse_entered" from="CardContainer/Card_Effect_Button_1" to="CardContainer/Card_Effect_Button_1" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CardContainer/Card_Effect_Button_1" to="CardContainer/Card_Effect_Button_1" method="_on_mouse_exited"]
[connection signal="pressed" from="CardContainer/Card_Effect_Button_1" to="CardContainer/Card_Effect_Button_1" method="_on_pressed"]
[connection signal="mouse_entered" from="CardContainer/Card_Effect_Button_2" to="CardContainer/Card_Effect_Button_2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CardContainer/Card_Effect_Button_2" to="CardContainer/Card_Effect_Button_2" method="_on_mouse_exited"]
[connection signal="pressed" from="CardContainer/Card_Effect_Button_2" to="CardContainer/Card_Effect_Button_2" method="_on_pressed"]
[connection signal="mouse_entered" from="CardContainer/Card_Effect_Button_3" to="CardContainer/Card_Effect_Button_3" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CardContainer/Card_Effect_Button_3" to="CardContainer/Card_Effect_Button_3" method="_on_mouse_exited"]
[connection signal="pressed" from="CardContainer/Card_Effect_Button_3" to="CardContainer/Card_Effect_Button_3" method="_on_pressed"]
